--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   display: flex;
   flex-direction: column;
   margin-top: 60px;
-  width: 450px;
+  width: 400px;
   height: 700px;
 }
 
@@ -39,13 +39,13 @@ body {
   flex: 1;
 }
 .box {
-  font-size: 48px;
+  font-size: 32px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 105px;
+  width: 80px;
   flex: 1 0 auto;
-  border: 1px solid white;
+  border: 1px solid rgb(238, 238, 238);
   background-color: #7DB9B6;
 }
 
@@ -55,4 +55,24 @@ body {
 
 .color-shade {
   background-color: #5a9996;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(238, 238, 238);
+  color: #5a9996;
+  text-align: center;
+  font-weight: 700px;
+  gap: 5px;
+}
+
+i {
+  color: black;
+}
+
+#name {
+  font-weight: 700px;
+  color: #458380;
 }
