--- a/style.css
+++ b/style.css
@@ -24,8 +24,16 @@ body {
   padding: 10px;
 }
 
-.history {
+.history-wrapper{
+  display: flex;
   font-size: 24px;
+  height: 25px;
+  gap: 5px;
+}
+
+.display {
+  height: 55px;
+  flex: 1;
 }
 
 .border {
